--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/three": "^0.167.2",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.536.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
