--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-notifications": "^1.7.4",
     "three": "^0.167.1",
     "three-stdlib": "^2.36.0",
     "zustand": "^4.5.7"
